fix: disable hover effect on mobile device

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -37,9 +37,7 @@
       width: 100%;
       transition: background-color 0.5s;
       cursor: pointer;
-      &:hover{
-        background-color: $action;
-      }
+      color: $primary;
     }
   }
 }
