--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -98,16 +98,16 @@ h2 {
   line-height: 40px;
   font-weight: 900;
   margin: 20px 0;
-  @media screen and (max-width: 992px){
-   font-size: 34px;
+  @media screen and (max-width: 992px) {
+    font-size: 34px;
   }
-  @media screen and (max-width: 768px){
+  @media screen and (max-width: 768px) {
     font-size: 30px;
-   }
-   @media screen and (max-width: 575px){
+  }
+  @media screen and (max-width: 575px) {
     font-size: 24px;
     line-height: 30px;
-   }
+  }
 }
 
 .section {
@@ -125,9 +125,17 @@ h2 {
   }
 }
 
-.button{
-  @media screen and (hover: none) {
-    background-color: $light;
+.button {
+  &:hover {
+    background-color: $action;
+  }
+  @media (hover: none) {
+    &:hover {
+      background-color: $light;
+    }
+    &:active {
+      background-color: $action;
+    }
   }
 }
 
