--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -62,9 +62,6 @@
         background-color: $light;
         color: $primary;
         cursor: pointer;
-        &:hover {
-          background-color: $action;
-        }
         @media screen and (max-width: 575px) {
           width: 100%;
         }
