--- a/src/styles/tour.scss
+++ b/src/styles/tour.scss
@@ -57,9 +57,6 @@
     color: $primary;
     background-color: $light;
     transition: background-color 0.5s;
-    &:hover {
-      background-color: $action;
-    }
     @media screen and (max-width: 575px) {
       width: 100%;
     }
