--- a/src/styles/tracks.scss
+++ b/src/styles/tracks.scss
@@ -151,9 +151,6 @@
         font-weight: 700;
         text-transform: uppercase;
         transition: background-color 0.5s;
-        &:hover {
-          background-color: $action;
-        }
         @media screen and (max-width: 680px) {
           width: 100%;
         }
